# connect-go-example

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  import.patch  main.go  server
cmd/client/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  main.go
greet/v1/: BUILD.bazel
proto/greet/v1/: BUILD.bazel  greet.proto
proto/greet/v1/greetv1connect/: BUILD.bazel
scripts/: status.sh
