load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")

exports_files(
    ["buf.yaml"],
    visibility = ["//visibility:public"],
)

gazelle_binary(
    name = "gazelle-buf",
    languages = [
        # Loads the native proto extension
        "@bazel_gazelle//language/proto:go_default_library",
        # Loads the Buf extension
        "@rules_buf//gazelle/buf:buf",
        # NOTE: This needs to be loaded after the proto language
    ],
)

###### gazelle:proto package
###### gazelle:proto_group go_package
# gazelle:exclude bazel-*
# gazelle:exclude gen
# gazelle:exclude scripts
# gazelle:go_grpc_compilers "@com_connectrpc_connect//cmd/protoc-gen-connect-go:protoc-gen-connect-go"
# gazelle:go_naming_convention import_alias
# gazelle:go_proto_compilers @rules_go//proto:go_proto
gazelle(
    name = "gazelle",
    gazelle = ":gazelle-buf",
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./bazel-*",
        "./git/*",
        "./vendor/*",
    ],
    lint_mode = "warn",
    lint_warnings = ["all"],
    mode = "check",
    verbose = True,
)
