load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/abitofhelp/connect-go-example/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/greet/v1:greetv1_go_proto",
        "//proto/greet/v1/greetv1connect:go_default_library",
        "@com_connectrpc_connect//:go_default_library",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
