load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "greetv1_proto",
    srcs = ["greet.proto"],
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "greet_proto_lint",
    # Using the ‘config’ key in buf_lint_test is unnecessary if you want to use Buf’s default values.
    config = "//:buf.yaml",
    targets = [":greetv1_proto"],
    visibility = ["//visibility:public"],
)

# Generate the greet.pb.go file.
go_proto_library(
    name = "greetv1_go_proto",
    importpath = "github.com/abitofhelp/connect-go-example/gen/greet/v1",
    proto = ":greetv1_proto",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":greetv1_go_proto",
    visibility = ["//visibility:public"],
)
